--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "kafkajs": "^2.2.4",
     "nodemailer": "^6.7.2"
   },
